[gd_scene load_steps=17 format=4 uid="uid://dr2cduwpg4u6y"]

[ext_resource type="Script" path="res://Scripts/level.gd" id="1_jatyj"]
[ext_resource type="AudioStream" uid="uid://dseokghg8jly0" path="res://Resources/Sounds/Goblins_Den_(Regular).wav" id="2_eeysk"]
[ext_resource type="TileSet" uid="uid://fyvg60bdsib1" path="res://TileSets/tileset.tres" id="3_1585b"]
[ext_resource type="Script" path="res://Scripts/level_tile_map.gd" id="4_lje5x"]
[ext_resource type="PackedScene" uid="uid://2qtrevekgf1s" path="res://Scenes/player_boy_spawn.tscn" id="5_5ixyw"]
[ext_resource type="PackedScene" uid="uid://4drxtr7s3djb" path="res://Scenes/level_transition.tscn" id="6_2gp23"]
[ext_resource type="PackedScene" uid="uid://eqldalh658ms" path="res://Scenes/locked_door.tscn" id="7_6a6ud"]
[ext_resource type="Resource" uid="uid://cehqmn45mcm86" path="res://Resources/key_dungeon.tres" id="8_nuv8m"]
[ext_resource type="AudioStream" uid="uid://dlffhyulkcuhb" path="res://Resources/Sounds/02_chest_close_2.wav" id="9_xlqyd"]
[ext_resource type="AudioStream" uid="uid://msco8k8aqqhq" path="res://Resources/Sounds/01_chest_open_3.wav" id="10_sx0tk"]
[ext_resource type="Script" path="res://Scripts/puzzle_03.gd" id="11_jfpov"]
[ext_resource type="PackedScene" uid="uid://f8kjg2l1l3el" path="res://Scenes/item_dropper.tscn" id="13_wm3k3"]
[ext_resource type="PackedScene" uid="uid://crqc8mukxyoog" path="res://Scenes/enemy_dropper.tscn" id="14_7lrh7"]
[ext_resource type="PackedScene" uid="uid://cqag1wijhivk" path="res://Scenes/torch_hidden.tscn" id="15_vobq1"]
[ext_resource type="PackedScene" uid="uid://bqudavxgfqooj" path="res://Scenes/PersistentDataHelper/PersistentDataHelper.tscn" id="15_xhk2q"]
[ext_resource type="PackedScene" uid="uid://bsrs5pghdyja3" path="res://Scenes/torch.tscn" id="16_uiqd5"]

[node name="castle_03" type="Node2D"]
script = ExtResource("1_jatyj")
music = ExtResource("2_eeysk")

[node name="TileLayers" type="Node2D" parent="."]

[node name="GroundTileLayers" type="TileMapLayer" parent="TileLayers"]
tile_map_data = PackedByteArray("AAARAAwABAADAAwAAAARAAsABAAJAAwAAAARAAoABAAJAAwAAAARAAkABAAJAAwAAAARAAgABAAJAAwAAAARAAcABAAJAAwAAAARAAYABAAJAAwAAAARAAUABAAJAAwAAAARAAQABAAJAAwAAAARAAMABAAJAAwAAAARAAIABAACAAsAAAARAAEABAABAAIAAAARAAAABAABAAAAAAAQAAwABAADAAwAAAAQAAsABAAJAAsAAAAQAAoABAAIAAwAAAAQAAkABAAJAAwAAAAQAAgABAAJAAwAAAAQAAcABAAJAAwAAAAQAAYABAAJAAwAAAAQAAUABAAJAAwAAAAQAAQABAAJAAwAAAAQAAMABAAJAAwAAAAQAAIABAACAAsAAAAQAAEABAABAAIAAAAQAAAABAABAAAAAAAPAAwABAADAAwAAAAPAAsABAAJAAwAAAAPAAoABAAJAAwAAAAPAAkABAAJAAwAAAAPAAgABAAJAAwAAAAPAAcABAAJAAwAAAAPAAYABAAJAAwAAAAPAAUABAAJAAwAAAAPAAQABAAJAAwAAAAPAAMABAAJAAwAAAAPAAIABAACAAsAAAAPAAEABAABAAIAAAAPAAAABAABAAAAAAAOAAwABAADAAwAAAAOAAsABAAJAAwAAAAOAAoABAAJAAwAAAAOAAkABAAJAAwAAAAOAAgABAAJAAwAAAAOAAcABAAJAAwAAAAOAAYABAAJAAwAAAAOAAUABAAJAAwAAAAOAAQABAAJAAwAAAAOAAMABAAJAAwAAAAOAAIABAACAAsAAAAOAAEABAABAAIAAAAOAAAABAABAAAAAAANAAwABAADAAwAAAANAAsABAAJAAwAAAANAAoABAAJAAwAAAANAAkABAAJAAwAAAANAAgABAAJAAwAAAANAAcABAAJAAwAAAANAAYABAAJAAwAAAANAAUABAAJAAwAAAANAAQABAAJAAwAAAANAAMABAAJAAwAAAANAAIABAACAAsAAAAMAAwABAADAAwAAAAMAAsABAAJAAwAAAAMAAoABAAJAAwAAAAMAAkABAAJAAwAAAAMAAgABAAJAAwAAAAMAAcABAAJAAwAAAAMAAYABAAJAAwAAAAMAAUABAAJAAwAAAAMAAQABAAJAAwAAAAMAAMABAAJAAwAAAAMAAIABAACAAsAAAAMAAEABAAHAAEAAAAMAAAABAAHAAAAAAALAAwABAADAAwAAAALAAsABAAJAAwAAAALAAoABAAJAAwAAAALAAkABAAJAAwAAAALAAgABAAJAAwAAAALAAcABAAJAAwAAAALAAYABAAJAAwAAAALAAUABAAJAAwAAAALAAQABAAJAAwAAAALAAMABAAJAAwAAAALAAIABAACAAsAAAALAAEABAAGAAEAAAALAAAABAAGAAAAAAAKAAwABAADAAwAAAAKAAsABAAJAAwAAAAKAAoABAAJAAwAAAAKAAkABAAJAAwAAAAKAAgABAAJAAwAAAAKAAcABAAJAAwAAAAKAAYABAAJAAwAAAAKAAUABAAJAAwAAAAKAAQABAAJAAwAAAAKAAMABAAJAAwAAAAKAAIABAACAAsAAAAKAAEABAABAAIAAAAKAAAABAABAAAAAAAJAAwABAADAAwAAAAJAAsABAAJAAwAAAAJAAoABAAJAAwAAAAJAAkABAAJAAwAAAAJAAgABAAJAAwAAAAJAAcABAAJAAwAAAAJAAYABAAJAAwAAAAJAAUABAAJAAwAAAAJAAQABAAJAAwAAAAJAAMABAAJAAwAAAAJAAIABAACAAsAAAAJAAEABAABAAIAAAAJAAAABAABAAAAAAAIAAwABAADAAwAAAAIAAsABAAJAAwAAAAIAAoABAAJAAwAAAAIAAkABAAJAAwAAAAIAAgABAAJAAwAAAAIAAcABAAJAAwAAAAIAAYABAAJAAwAAAAIAAUABAAJAAwAAAAIAAQABAAJAAwAAAAIAAMABAAJAAwAAAAIAAIABAACAAsAAAAIAAEABAABAAIAAAAIAAAABAABAAAAAAAHAAwABAADAAwAAAAHAAsABAAJAAwAAAAHAAoABAAJAAwAAAAHAAkABAAJAAwAAAAHAAgABAAJAAwAAAAHAAcABAAJAAwAAAAHAAYABAAJAAwAAAAHAAUABAAJAAwAAAAHAAQABAAJAAwAAAAHAAMABAAJAAwAAAAHAAIABAACAAsAAAAHAAEABAABAAIAAAAHAAAABAABAAAAAAAGAAwABAADAAwAAAAGAAsABAAJAAwAAAAGAAoABAAJAAwAAAAGAAkABAAJAAwAAAAGAAgABAAJAAwAAAAGAAcABAAJAAwAAAAGAAYABAAJAAwAAAAGAAUABAAJAAwAAAAGAAQABAAJAAwAAAAGAAMABAAJAAwAAAAGAAIABAACAAsAAAAGAAEABAABAAIAAAAGAAAABAABAAAAAAAFAAwABAADAAwAAAAFAAsABAAJAAwAAAAFAAoABAAJAAwAAAAFAAkABAAJAAwAAAAFAAgABAAJAAwAAAAFAAcABAAJAAwAAAAFAAYABAAJAAwAAAAFAAUABAAJAAwAAAAFAAQABAAJAAwAAAAFAAMABAAJAAwAAAAFAAIABAACAAsAAAAFAAEABAABAAIAAAAFAAAABAABAAAAAAAEAAwABAADAAwAAAAEAAsABAAJAAwAAAAEAAoABAAJAAwAAAAEAAkABAAJAAwAAAAEAAgABAAJAAwAAAAEAAcABAAJAAwAAAAEAAYABAAJAAwAAAAEAAUABAAJAAwAAAAEAAQABAAJAAwAAAAEAAMABAAJAAwAAAAEAAIABAACAAsAAAAEAAEABAABAAIAAAAEAAAABAABAAAAAAADAAwABAADAAwAAAADAAsABAAHAAwAAAADAAoABAAHAAsAAAADAAkABAAJAAwAAAADAAgABAAJAAwAAAADAAcABAAJAAwAAAADAAYABAAJAAwAAAADAAUABAAJAAwAAAADAAQABAAJAAwAAAADAAMABAAIAAwAAAADAAIABAACAAsAAAADAAEABAABAAIAAAADAAAABAABAAAAAAACAAwABAADAAwAAAACAAsABAAGAAwAAAACAAoABAAGAAsAAAACAAkABAAJAAwAAAACAAgABAAJAAwAAAACAAcABAAJAAwAAAACAAYABAAJAAwAAAACAAUABAAJAAwAAAACAAQABAAJAAwAAAACAAMABAAIAAwAAAACAAIABAACAAsAAAACAAEABAABAAIAAAACAAAABAABAAAAAAABAAwABAAAAAwAAAABAAsABAACAAwAAAABAAoABAACAAwAAAABAAkABAACAAwAAAABAAgABAACAAwAAAABAAcABAACAAwAAAABAAYABAACAAwAAAABAAUABAACAAwAAAABAAQABAACAAwAAAABAAMABAACAAwAAAABAAIABAAAAAsAAAABAAEABAABAAIAAAABAAAABAABAAAAAAAAAAwABAAAAAgAAAAAAAsABAAAAAgAAAAAAAoABAAAAAgAAAAAAAkABAAAAAgAAAAAAAgABAAAAAgAAAAAAAcABAAAAAgAAAAAAAYABAAAAAgAAAAAAAUABAAAAAgAAAAAAAQABAAAAAgAAAAAAAMABAAAAAgAAAAAAAIABAAAAAkAAAAAAAEABAAAAAIAAAAAAAAABAAAAAAAAAAXAAwABAABAAwAAAAXAAsABAADAAsAAAAXAAoABAADAAsAAAAXAAkABAADAAsAAAAXAAgABAADAAsAAAAXAAcABAADAAsAAAAXAAYABAADAAsAAAAXAAUABAADAAsAAAAXAAQABAADAAsAAAAXAAMABAADAAsAAAAXAAIABAABAAsAAAAXAAEABAABAAIAAAAXAAAABAABAAAAAAAWAAsABAAJAAwAAAAWAAoABAAJAAwAAAAWAAkABAAJAAwAAAAWAAcABAAJAAwAAAAWAAYABAAJAAwAAAAWAAUABAAJAAwAAAAWAAQABAAJAAwAAAAWAAMABAAJAAwAAAAWAAIABAACAAsAAAAWAAEABAABAAIAAAAWAAAABAABAAAAAAAVAAwABAADAAwAAAAVAAsABAAJAAwAAAAVAAoABAAJAAwAAAAVAAkABAAJAAwAAAAVAAgABAAJAAwAAAAVAAcABAAJAAwAAAAVAAYABAAJAAwAAAAVAAUABAAJAAwAAAAVAAQABAAJAAwAAAAVAAMABAAJAAwAAAAVAAIABAACAAsAAAAVAAEABAABAAIAAAAVAAAABAABAAAAAAAUAAwABAADAAwAAAAUAAsABAAJAAwAAAAUAAcABAAJAAwAAAAUAAYABAAJAAwAAAAUAAUABAAJAAwAAAAUAAQABAAJAAwAAAAUAAMABAAJAAwAAAAUAAIABAACAAsAAAAUAAEABAABAAIAAAAUAAAABAABAAAAAAATAAwABAADAAwAAAATAAsABAAJAAwAAAATAAoABAAJAAwAAAATAAkABAAJAAwAAAATAAgABAAJAAwAAAATAAcABAAJAAwAAAATAAYABAAJAAwAAAATAAUABAAJAAwAAAATAAQABAAJAAwAAAATAAMABAAJAAwAAAATAAIABAACAAsAAAATAAEABAABAAIAAAATAAAABAABAAAAAAASAAwABAADAAwAAAASAAsABAAJAAwAAAASAAoABAAJAAwAAAASAAkABAAJAAwAAAASAAgABAAJAAwAAAASAAcABAAJAAwAAAASAAYABAAJAAwAAAASAAUABAAJAAwAAAASAAQABAAJAAwAAAASAAMABAAIAAwAAAASAAIABAACAAsAAAASAAEABAABAAIAAAASAAAABAABAAAAAAAXAA0ABAABAAoAAAAVAA0ABAABAAoAAAAUAA0ABAABAAoAAAATAA0ABAABAAoAAAASAA0ABAABAAoAAAARAA0ABAABAAoAAAAQAA0ABAABAAoAAAAPAA0ABAABAAoAAAAOAA0ABAABAAoAAAANAA0ABAABAAoAAAAMAA0ABAABAAoAAQALAA0ABAABAAoAAAAKAA0ABAABAAoAAAAJAA0ABAABAAoAAAAIAA0ABAABAAoAAAAHAA0ABAABAAoAAAAGAA0ABAABAAoAAAAFAA0ABAABAAoAAAAEAA0ABAABAAoAAAADAA0ABAABAAoAAAACAA0ABAABAAoAAAABAA0ABAABAAoAAAAAAA0ABAAAAAoAAAAUAAgABAAJAAwAAAAUAAkABAAJAAwAAAAUAAoABAAJAAwAAAAWAAwABAADAAwAAAAWAA0ABAABAAoAAAAYAAAABAAFAAAAAAAYAAEABAAFAAIAAAAYAAIABAAFAAkAAAAYAAMABAAFAAkAAAAYAAQABAAFAAkAAAAYAAUABAAFAAkAAAAYAAYABAAFAAkAAAAYAAcABAAFAAkAAAAYAAgABAAFAAkAAAAYAAkABAAFAAkAAAAYAAwABAAFAAkAAAAYAAoABAAFAAkAAAAYAAsABAAFAAkAAAAYAA0ABAAFAAoAAAAWAAgABAAJAAwAAAA=")
tile_set = ExtResource("3_1585b")
script = ExtResource("4_lje5x")

[node name="DecorationTileMapeLayers" type="TileMapLayer" parent="TileLayers"]
tile_map_data = PackedByteArray("AAANAA0ABAAEAAoAAAALAA0ABAAEAAoAAAADAAQAAwAcAAMAAAAEAAQAAwAdAAMAAAACAAMAAwAbAAIAAAACAAQAAwAbAAMAAAADAAMAAwAcAAIAAAAEAAMAAwAdAAIAAAAWAAIAAwAbAAIAAAAXAAIAAwAcAAIAAAAXAAMAAwAbAAEAAAAVAAIAAwAcAAMAAAAXAAwAAwAdAAMAAAAXAAsAAwAdAAIAAAAVAAsAAwAbAAIAAAACAAwAAwAcAAIAAAADAAwAAwAbAAMAAAACAAsAAwAdAAMAAAABAAwAAwAbAAIAAAA=")
tile_set = ExtResource("3_1585b")

[node name="PlayerBoySpawn" parent="." instance=ExtResource("5_5ixyw")]
position = Vector2(199, 205)

[node name="LevelTransition_04" parent="." instance=ExtResource("6_2gp23")]
position = Vector2(200, 26)
level = "res://Scenes/castle_04.tscn"
target_transition_area = "LevelTransition_04"
size = 1
side = 2

[node name="LevelTransition_03" parent="." instance=ExtResource("6_2gp23")]
position = Vector2(200, 215)
level = "res://Scenes/castle_02.tscn"
target_transition_area = "LevelTransition_03"
size = 1
side = 3

[node name="LockedDoor" parent="." instance=ExtResource("7_6a6ud")]
position = Vector2(174, 25)
key_item = ExtResource("8_nuv8m")
locked_audio = ExtResource("9_xlqyd")
open_audio = ExtResource("10_sx0tk")

[node name="EnemyDropper" parent="." instance=ExtResource("14_7lrh7")]
position = Vector2(151, 168)

[node name="EnemyDropper2" parent="." instance=ExtResource("14_7lrh7")]
position = Vector2(249, 72)

[node name="EnemyDropper3" parent="." instance=ExtResource("14_7lrh7")]
position = Vector2(248, 168)

[node name="EnemyDropper4" parent="." instance=ExtResource("14_7lrh7")]
position = Vector2(152, 72)

[node name="Puzzle_03" type="Node2D" parent="."]
script = ExtResource("11_jfpov")

[node name="ItemDropper" parent="Puzzle_03" instance=ExtResource("13_wm3k3")]
position = Vector2(200, 120)
item = ExtResource("8_nuv8m")

[node name="PersistentDataHelper" parent="Puzzle_03" instance=ExtResource("15_xhk2q")]

[node name="DirectionalLight2D" type="DirectionalLight2D" parent="."]
color = Color(0.535156, 0.449473, 0.43343, 1)
energy = 0.99
blend_mode = 2

[node name="TorchHidden" parent="." instance=ExtResource("15_vobq1")]
position = Vector2(8, 215)

[node name="TorchHidden2" parent="." instance=ExtResource("15_vobq1")]
position = Vector2(393, 216)

[node name="Torch" parent="." instance=ExtResource("16_uiqd5")]
position = Vector2(8.38152, 14.6473)

[node name="Torch2" parent="." instance=ExtResource("16_uiqd5")]
position = Vector2(391.382, 14.6473)
